# stm32-gps-imu-fusion

./: .gitignore  .mxproject  Akseler_a.ioc  CMakeLists.txt  README.md
Core/Inc/: accel.h  attitude.h  geo.h  gps.h  kalman.h  main.h  stm32f4xx_it.h
Core/Src/: accel.c  attitude.c  geo.c  gps.c  kalman.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  replay_static.c  test_attitude.c  test_kalman.c
tools/: plot_gate_compare.py  plot_kf.py  plot_static.py
